# plumber

./: .env  .gitignore  01.txt  Cargo.toml  cargo-generate.toml
docs/: base  paln-b  plan-a  plan_a  plan_b  plan_c  serde_a  template_a  template_b  test_server_a
examples/: exa.rs
sdk-a/: Cargo.toml
sdk-a/src/: main.rs
src/: main.rs
template_20230831/: Cargo.toml
