[package]

[dependencies]
tokio-tungstenite = "*"
tokio = { version = "1.28.1", features = ["full"] }
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
futures-channel = "0.3.28"
url = "2.3.1"
serde_json = "*"

[dependencies.serde]
version = "^1.0.163"
features = ["derive"]