[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
description = "{{description}}"
authors = [ "Kunkka" ]

[dependencies]
tokio-tungstenite = "*"
tokio = { version = "1.28.1", features = ["full"] }
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
futures-channel = "0.3.28"
url = "2.3.1"
serde_json = "*"
dotenv = "0.15.0"
chrono = "0.4.32"

[dependencies.serde]
version = "^1.0.163"
features = ["derive"]
